--- a/drupal/sites/all/themes/pivot/sass/_pivot-global.scss
+++ b/drupal/sites/all/themes/pivot/sass/_pivot-global.scss
@@ -2831,6 +2831,7 @@ iframe.media-youtube-player {
 				float: right;
 				@media (max-width: 480px) {
 				position: absolute;
+				right: 20px;
 				}
 			}
 		}
